@@ -1,3 +1,9 @@
+2001-12-30  Guido Serassio <serassio@libero.it>
+
+	* include/winsvc.h: Add EnumServiceStatusEx(),
+	QueryServiceStatusEx()
+	& RegisterServiceCtrlHandlerEx()
+  
 2001-12-21  Robert Collins  <rbtcollins@hotmail.com>
 
 	* include/wingdi.h: Add GetRandomRgn and SYSRGN.
